Fix whitespace

--- a/styles/index.css
+++ b/styles/index.css
@@ -191,9 +191,7 @@ textarea {
 @media screen and (-ms-high-contrast: black-on-white) {
 
 }
-@media screen and (-ms-high-contrast: white-on-black) {
-  
-}
+@media screen and (-ms-high-contrast: white-on-black) {}
 
 /* LANDMARKS */
 [role=banner]      , body > header {}
